base/cert-manager/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  ingress:
  # In-namespace
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": cert-manager
        app.kubernetes.io/instance: cert-manager
  # Webhook
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
      - port: "9402"
        protocol: TCP
  egress:
  # In-namespace
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": cert-manager
        app.kubernetes.io/instance: cert-manager
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  # HTTP
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
